
2021-05-11  Simon Sobisch <simonsobisch@gnu.org>

	* parser.y (use_reporting): check for valid identifier before use,
	  use common malloc for generated common

2021-04-01  Ron Norman <rjn@inglenet.com>

	* codegen.c: Use cob_trace_get_stmt to get a number for the statement
				to be emitted with cob_trace_stmt_num instead of
				cob_trace_stmt

2021-03-26  Ron Norman <rjn@inglenet.com>

	* codegen.c: Emit cob_symbol for ANY NUMERIC and ANY LENGTH

2021-03-20  Ron Norman <rjn@inglenet.com>

	* cobc.c: Set flag for symbol table for -fdump & -G as well
	* codegen.c: Add to cob_symbol how many indexes a variable requires

2021-03-18  Ron Norman <rjn@inglenet.com>

	* cobc.c,flag.def: Changes for compile option  -fsymtab
				to generate a symbol table in the module for 'dump'
				The flag cb_flag_symbols is also enabled with -dump, -ftrace
	* tree.h: added flags to cb_field for symbol table processing
	* codegen.c: A table of 'cob_symbol' is emitted defining all symbols in 
				the module and this is now used for 'dump' instead of
				emitting a bunch of code to do the dump
				For TRACE, a bit is now set in module->flag_debug_trace 
				which is tested before calling the 'trace' routines
				Also, section/paragraph/verb names are now set via pointers 
				in cob_module

2021-02-18  Ron Norman <rjn@inglenet.com>

	* cobc.c: Changes to replace VB-CISAM with V-ISAM

2021-02-17  Ron Norman <rjn@inglenet.com>

	* sqlxfdgen.c: Always set size of rid_tablename to 8 

2021-02-16  Ron Norman <rjn@inglenet.com>

	* codegen.c: fixed some compile warnings
	* sqlxfdgen.c: Changes to use rid_tablename as unique row number
				This is used for better performance reading thru duplicate
				keys and limiting the row processed in one SELECT

2021-02-09  Ron Norman <rjn@inglenet.com>

	* cobc.c,flag.def,codegen.c,field.c: changed -fsqldb= to flag -fsql

2021-02-04  Simon Sobisch <simonsobisch@gnu.org>

	* codeoptim.c (COB_GET_NUMDISPS, COB_GET_NUMDISPS64):