@@ -9059,8 +9059,23 @@ move_warning (cb_tree src, cb_tree dst, const unsigned int value_flag,
 					warning_destination (warning_opt, src);
 				} else if (src_flag == -1) {
 					if (CB_LITERAL_P (src)) {
-						cb_note_x (warning_opt, dst,
-							_("value is %s"), CB_LITERAL (src)->data);
+						if (CB_LITERAL (src)->size < 40) {
+							char numval[48];
+							int  p, k = 0;
+							if (CB_LITERAL (src)->sign == -1)
+								numval[k++] = '-';
+							strcpy(&numval[k],CB_LITERAL (src)->data);
+							if (CB_LITERAL (src)->scale > 0) {
+								p = CB_LITERAL (src)->size - CB_LITERAL (src)->scale;
+								numval[k + p] = '.';
+								strcpy(&numval[k+p+1],CB_LITERAL (src)->data+p);
+							}
+							cb_note_x (warning_opt, dst, 
+									_("value is %s"), numval);
+						} else {
+							cb_note_x (warning_opt, dst, 
+									_("value is %s"), CB_LITERAL (src)->data);
+						}
 					}
 				} else {
 					cb_note_x (warning_opt, dst,
